# Console-Messenger-Application

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/client/: CMakeLists.txt
client/client/include/: client.h  socket.h
client/client/src/: client.cpp  socket.cpp
client/main_app/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt
server/main_app/: main.cpp
server/server/: CMakeLists.txt
server/server/include/: server.h
server/server/src/: server.cpp  socket.cpp
serwer/main_app/: main.cpp
serwer/server/include/: server.h
serwer/server/src/: server.cpp
socket/: CMakeLists.txt
socket/include/: socket.h
socket/src/: socket.cpp
tests/: CMakeLists.txt  main.cpp  tests.cpp
tests/socket/src/: socket.cpp
